--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,8 @@ Description: This package provides functions for cleaning data collected by the 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: dplyr,
-	 plyr,
-	 tidyr
 RoxygenNote: 7.1.2
-Depends: R (>= 2.10)
+Depends: R (>= 2.10), dplyr, plyr, tidyr
 Suggests: rmarkdown,
     knitr,
     testthat (>= 3.0.0)
