--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
-Imports: dplyr, plyr, tidyr
-Depends: R (>= 2.10)
+Depends: R (>= 2.10), dplyr, plyr, tidyr
 Suggests: rmarkdown,
     knitr,
     testthat (>= 3.0.0)
